import * as React from 'react';
import { render, screen } from '@testing-library/react';
import userEvent from '@testing-library/user-event';

import GrowthSkillsTable from '../skillsTable';

const skillGroupResults = [{"skill_group":"Adjectives and Adverbs","description":"Students who show proficiency in this skill correctly use single adjectives, adverbs, cumulative adjectives, coordinate adjectives, comparative adjectives, and superlative adjectives on a total of 7 questions.","skills":[{"pre":null,"post":{"id":7,"name":"Starter Post Q12 - Single Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"-Lins3ua1sQQN6Tl7Q4h","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":9,"name":"Starter Post Q13 - Single Adverbs of Manner","number_correct":1,"number_incorrect":0,"question_uid":"-LinsDnhwR8T0jLx3Ypp","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":10,"name":"Starter Post Q14 - Adjectives and Adverbs","number_correct":1,"number_incorrect":0,"question_uid":"-LinspkyKBeYdTTIn8Zc","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":18,"name":"Starter Pre Q7 - Comparative vs. Superlative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"-LKWu6ki2OHKFMAVZIko","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":19,"name":"Starter Pre Q14 - Adjectives and Adverbs","number_correct":1,"number_incorrect":0,"question_uid":"-LKWyxEPkvcrETG1dVN3","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":22,"name":"Starter Pre Q12 - Single Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"-LKX3Kput_ae17nDodqp","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":40,"name":"Starter Pre Q6 - Comparative vs. Superlative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"-LL-z3Is5RTRvWyNZR6W","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":41,"name":"Starter Pre Q13 - Single Adverbs of Manner","number_correct":1,"number_incorrect":0,"question_uid":"-LL03FB3y06qdXC7cEI_","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":null,"post":{"id":118,"name":"Starter Post Q17 - Coordinate Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"0f5f7a4f-62f6-48f6-a459-6b5580fc242f","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":158,"name":"Starter Post Q6 - Comparative vs. Superlative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"411744f6-0a82-4570-8dec-06513342c838","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":223,"name":"Starter Post Q7 - Comparative vs. Superlative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"87d6c318-8a55-4c68-8b61-c87561014491","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":267,"name":"Starter Post Q18 - Cumulative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"bca7e621-0576-4547-b13e-668e449a8705","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":286,"name":"Starter Pre Q18 - Cumulative Adjectives","number_correct":1,"number_incorrect":0,"question_uid":"d56040fb-8175-47c4-a522-7c07afa7629a","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":293,"name":"Starter Pre Q17 - Coordinate Adjectives","number_correct":0,"number_incorrect":1,"question_uid":"df237870-b7ff-420c-887a-827f26c04042","proficiency_score":0,"summary":"Not correct"},"post":null}],"number_of_correct_questions_text":"7 of 7 Questions Correct","proficiency_text":"Gained Full Proficiency","pre_test_proficiency":"Partial Proficiency","pre_test_proficiency_score":0.8571428571428571,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":6,"number_incorrect":1,"summary":"Partially correct"},"post":{"number_correct":7,"number_incorrect":0,"summary":"Fully correct"},"id":125,"post_correct_skill_ids":[7,9,10,118,158,223,267],"pre_correct_skill_ids":[18,19,22,40,41,286],"skill_ids":[7,9,10,118,158,223,267],"question_uids":["-Lins3ua1sQQN6Tl7Q4h","-LinsDnhwR8T0jLx3Ypp","-LinspkyKBeYdTTIn8Zc","-LKWu6ki2OHKFMAVZIko","-LKWyxEPkvcrETG1dVN3","-LKX3Kput_ae17nDodqp","-LL-z3Is5RTRvWyNZR6W","-LL03FB3y06qdXC7cEI_","0f5f7a4f-62f6-48f6-a459-6b5580fc242f","411744f6-0a82-4570-8dec-06513342c838","87d6c318-8a55-4c68-8b61-c87561014491","bca7e621-0576-4547-b13e-668e449a8705","d56040fb-8175-47c4-a522-7c07afa7629a","df237870-b7ff-420c-887a-827f26c04042"]},{"skill_group":"Capitalization","description":"Students who show proficiency in this skill use capitalization at the beginning of a sentence and correct capitalization of names, dates, holidays, geographic locations, and the pronoun “I” on a total of 2 questions. ","skills":[{"pre":null,"post":{"id":132,"name":"Starter Post Q11 - Capitalization (Basic)","number_correct":1,"number_incorrect":0,"question_uid":"235750e8-10e7-43a9-9b71-ed16c77f0a49","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":152,"name":"Starter Post Q10 - Capitalization (Basic)","number_correct":1,"number_incorrect":0,"question_uid":"36e7e144-9783-4c85-9eb6-847fc52eb1b2","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":198,"name":"Starter Pre Q11 - Capitalization (Basic)","number_correct":1,"number_incorrect":0,"question_uid":"7091424b-b0d2-4e0d-b283-d45840a2f1ce","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":266,"name":"Starter Pre Q10 - Capitalization (Basic)","number_correct":1,"number_incorrect":0,"question_uid":"bb95f513-02b5-49e1-a1b3-48d9d1d2a9df","proficiency_score":1,"summary":"Fully correct"},"post":null}],"number_of_correct_questions_text":"2 of 2 Questions Correct","proficiency_text":"Maintained Proficiency","pre_test_proficiency":"Full Proficiency","pre_test_proficiency_score":1,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"post":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"id":123,"post_correct_skill_ids":[132,152],"pre_correct_skill_ids":[198,266],"skill_ids":[132,152],"question_uids":["235750e8-10e7-43a9-9b71-ed16c77f0a49","36e7e144-9783-4c85-9eb6-847fc52eb1b2","7091424b-b0d2-4e0d-b283-d45840a2f1ce","bb95f513-02b5-49e1-a1b3-48d9d1d2a9df"]},{"skill_group":"Commonly Confused Words","description":"Students who show proficiency in this skill will make the correct choice between the commonly confused words <i>your</i> and <i>you're</i>, and <i>their</i>, <i>they're</i>, and <i>there</i> on a total of 2 questions.","skills":[{"pre":{"id":12,"name":"Starter Pre Q5 - Commonly Confused Words (Their/There/They're)","number_correct":1,"number_incorrect":0,"question_uid":"-LKc-s1Gzbf6QiyHHRr-","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":23,"name":"Starter Pre Q4 - Commonly Confused Words (Your/You're)","number_correct":1,"number_incorrect":0,"question_uid":"-LKXt53wwLoZW3EkmH_K","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":null,"post":{"id":257,"name":"Starter Post Q5 - Commonly Confused Words (Their/There/They're)","number_correct":1,"number_incorrect":0,"question_uid":"b64ed710-b18b-4079-84b2-0b72e7343f5e","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":291,"name":"Starter Post Q4 - Commonly Confused Words (Your/You're)","number_correct":1,"number_incorrect":0,"question_uid":"dd6e3315-e738-4483-b7ad-ba2ed7b94e0e","proficiency_score":1,"summary":"Fully correct"}}],"number_of_correct_questions_text":"2 of 2 Questions Correct","proficiency_text":"Maintained Proficiency","pre_test_proficiency":"Full Proficiency","pre_test_proficiency_score":1,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"post":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"id":128,"post_correct_skill_ids":[257,291],"pre_correct_skill_ids":[12,23],"skill_ids":[257,291],"question_uids":["-LKc-s1Gzbf6QiyHHRr-","-LKXt53wwLoZW3EkmH_K","b64ed710-b18b-4079-84b2-0b72e7343f5e","dd6e3315-e738-4483-b7ad-ba2ed7b94e0e"]},{"skill_group":"Compound Subjects, Objects, and Predicates","description":"Students who show proficiency in this skill correctly form compound subjects and objects, agree the subject to the verb with a compound subject, and use correct punctuation when listing objects on a total of 3 questions.","skills":[{"pre":{"id":61,"name":"Starter Pre Q20 - Compound Subjects","number_correct":1,"number_incorrect":0,"question_uid":"-LQtdcqlCN1k2GA_pGNF","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":134,"name":"Starter Pre Q21 - Listing Objects","number_correct":1,"number_incorrect":0,"question_uid":"285424c5-0d38-46e3-b48e-6d1adc3bbe26","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":null,"post":{"id":148,"name":"Starter Post Q20 - Compound Subjects","number_correct":1,"number_incorrect":0,"question_uid":"31986bb0-534b-4519-98b8-ff6ac1b334ad","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":182,"name":"Starter Post Q21 - Listing Objects","number_correct":1,"number_incorrect":0,"question_uid":"5ef3dca1-0ecd-4f39-bca0-dbc32725521d","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":295,"name":"Starter Post Q19 - Compound Predicates","number_correct":1,"number_incorrect":0,"question_uid":"e2a70630-210a-4888-a284-6e5f0d6d28e2","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":310,"name":"Starter Pre Q19 - Compound Predicates","number_correct":1,"number_incorrect":0,"question_uid":"f28332d4-634d-45a6-ad3e-e18d08e290a2","proficiency_score":1,"summary":"Fully correct"},"post":null}],"number_of_correct_questions_text":"3 of 3 Questions Correct","proficiency_text":"Maintained Proficiency","pre_test_proficiency":"Full Proficiency","pre_test_proficiency_score":1,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":3,"number_incorrect":0,"summary":"Fully correct"},"post":{"number_correct":3,"number_incorrect":0,"summary":"Fully correct"},"id":127,"post_correct_skill_ids":[148,182,295],"pre_correct_skill_ids":[61,134,310],"skill_ids":[148,182,295],"question_uids":["-LQtdcqlCN1k2GA_pGNF","285424c5-0d38-46e3-b48e-6d1adc3bbe26","31986bb0-534b-4519-98b8-ff6ac1b334ad","5ef3dca1-0ecd-4f39-bca0-dbc32725521d","e2a70630-210a-4888-a284-6e5f0d6d28e2","f28332d4-634d-45a6-ad3e-e18d08e290a2"]},{"skill_group":"Plural and Possessive Nouns","description":"Students who show proficiency in this skill will make the correct choice between a plural and possessive noun and use apostrophes correctly on a total of 2 questions.","skills":[{"pre":null,"post":{"id":5,"name":"Starter Post Q8 - Plural vs. Possessive Nouns","number_correct":1,"number_incorrect":0,"question_uid":"-LinrO2cZGFlWXysOoVs","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":6,"name":"Starter Post Q9 - Plural vs. Possessive Nouns","number_correct":1,"number_incorrect":0,"question_uid":"-LinrV9paU5zGnUuAN9t","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":14,"name":"Starter Pre Q9 - Plural vs. Possessive Nouns","number_correct":1,"number_incorrect":0,"question_uid":"-LKStUOiTFAuve_pUNNl","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":15,"name":"Starter Pre Q8 - Plural vs. Possessive Nouns","number_correct":1,"number_incorrect":0,"question_uid":"-LKSuWT89unu5gJ2WRip","proficiency_score":1,"summary":"Fully correct"},"post":null}],"number_of_correct_questions_text":"2 of 2 Questions Correct","proficiency_text":"Maintained Proficiency","pre_test_proficiency":"Full Proficiency","pre_test_proficiency_score":1,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"post":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"id":124,"post_correct_skill_ids":[5,6],"pre_correct_skill_ids":[14,15],"skill_ids":[5,6],"question_uids":["-LinrO2cZGFlWXysOoVs","-LinrV9paU5zGnUuAN9t","-LKStUOiTFAuve_pUNNl","-LKSuWT89unu5gJ2WRip"]},{"skill_group":"Prepositional Phrases","description":"Students who show proficiency in this skill correctly place a prepositional phrase, agree the subject to the verb with a prepositional phrase, and correctly place adjectives, adverbs, and prepositional phrases together.","skills":[{"pre":null,"post":{"id":8,"name":"Starter Post Q15 - Prepositional Phrases","number_correct":1,"number_incorrect":0,"question_uid":"-LinsaouHGCBKj2eprfC","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":11,"name":"Starter Post Q16 - Prepositional Phrases","number_correct":1,"number_incorrect":0,"question_uid":"-Lint05rURFiNEg8K63T","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":20,"name":"Starter Pre Q16 - Prepositional Phrases","number_correct":1,"number_incorrect":0,"question_uid":"-LKX1YDGP_nJ70U6_y-A","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":42,"name":"Starter Pre Q15 - Prepositional Phrases","number_correct":0,"number_incorrect":1,"question_uid":"-LL5ho_8jppZoOmjaubo","proficiency_score":0,"summary":"Not correct"},"post":null}],"number_of_correct_questions_text":"2 of 2 Questions Correct","proficiency_text":"Gained Full Proficiency","pre_test_proficiency":"Partial Proficiency","pre_test_proficiency_score":0.5,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":1,"number_incorrect":1,"summary":"Partially correct"},"post":{"number_correct":2,"number_incorrect":0,"summary":"Fully correct"},"id":126,"post_correct_skill_ids":[8,11],"pre_correct_skill_ids":[20],"skill_ids":[8,11],"question_uids":["-LinsaouHGCBKj2eprfC","-Lint05rURFiNEg8K63T","-LKX1YDGP_nJ70U6_y-A","-LL5ho_8jppZoOmjaubo"]},{"skill_group":"Subject-Verb Agreement","description":"Students who show proficiency in this skill will correctly agree the subject to the verb.","skills":[{"pre":null,"post":{"id":1,"name":"Starter Post Q1 - Basic Subject-verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"-LinooJU7h_BiASTmMFU","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":2,"name":"Starter Post Q2 - Basic Subject-verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"-Linp1yljwuUFNcXjiaQ","proficiency_score":1,"summary":"Fully correct"}},{"pre":null,"post":{"id":3,"name":"Starter Post Q3 - Basic Subject-verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"-LinpE9ODZ5__Km8E4px","proficiency_score":1,"summary":"Fully correct"}},{"pre":{"id":16,"name":"Starter Pre Q1 - Basic Subject-Verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"-LKT0cJcWANIOLWdxGDA","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":17,"name":"Starter Pre Q3 - Basic Subject-Verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"-LKWlY_fa3JXEFzQO3I8","proficiency_score":1,"summary":"Fully correct"},"post":null},{"pre":{"id":104,"name":"Starter Pre Q2 - Basic Subject-Verb Agreement","number_correct":1,"number_incorrect":0,"question_uid":"010d75a2-83e2-4329-95c0-0243a8a46151","proficiency_score":1,"summary":"Fully correct"},"post":null}],"number_of_correct_questions_text":"3 of 3 Questions Correct","proficiency_text":"Maintained Proficiency","pre_test_proficiency":"Full Proficiency","pre_test_proficiency_score":1,"post_test_proficiency":"Full Proficiency","post_test_proficiency_score":1,"pre":{"number_correct":3,"number_incorrect":0,"summary":"Fully correct"},"post":{"number_correct":3,"number_incorrect":0,"summary":"Fully correct"},"id":216,"post_correct_skill_ids":[1,2,3],"pre_correct_skill_ids":[16,17,104],"skill_ids":[1,2,3],"question_uids":["-LinooJU7h_BiASTmMFU","-Linp1yljwuUFNcXjiaQ","-LinpE9ODZ5__Km8E4px","-LKT0cJcWANIOLWdxGDA","-LKWlY_fa3JXEFzQO3I8","010d75a2-83e2-4329-95c0-0243a8a46151"]}]


describe('GrowthSkillsTable component', () => {
  test('should render when it is not expandable', () => {
    const { asFragment } = render(<GrowthSkillsTable
      isExpandable={false}
      skillGroupResults={skillGroupResults}
    />)
    expect(asFragment()).toMatchSnapshot();
  })

  test('should render when it is expandable', () => {
    const { asFragment } = render(<GrowthSkillsTable
      isExpandable={true}
      skillGroupResults={skillGroupResults}
    />)
    expect(asFragment()).toMatchSnapshot();
  })

  test('should show every row when "Show more" is clicked', async () => {
    const rowCount = skillGroupResults.length;
    const defaultRowCount = 3; // Assuming this is the default row count that is initially displayed

    render(<GrowthSkillsTable isExpandable={true} skillGroupResults={skillGroupResults} />);

    // Check if only the default number of rows are displayed initially
    expect(screen.getAllByRole('row')).toHaveLength(defaultRowCount + 1); // +1 for the header row

    // Find and click the "Show more" button
    await userEvent.click(screen.getByText('Show more'));

    // Check if all rows are displayed after clicking the button
    expect(screen.getAllByRole('row')).toHaveLength(rowCount + 1); // +1 for the header row
  });

})
