// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrowthSkillsTable component should render when it is expandable 1`] = `
<DocumentFragment>
  <div
    class="skills-table-container"
  >
    <table
      class="skills-table contracted"
    >
      <thead>
        <tr>
          <th
            class="skill-column-header"
          >
            Skill
          </th>
          <th>
            Correct
          </th>
          <th>
            Incorrect
          </th>
          <th
            class="summary-header"
          >
            Summary
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Adjectives and Adverbs
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Capitalization
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Commonly Confused Words
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
      </tbody>
    </table>
    <button
      class="show-more-button"
      type="button"
    >
      <span>
        Show more
      </span>
      <img
        alt="Expand icon"
        class="expand-icon"
        src="undefined/images/icons/expand.svg"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`GrowthSkillsTable component should render when it is not expandable 1`] = `
<DocumentFragment>
  <div
    class="skills-table-container"
  >
    <table
      class="skills-table "
    >
      <thead>
        <tr>
          <th
            class="skill-column-header"
          >
            Skill
          </th>
          <th>
            Correct
          </th>
          <th>
            Incorrect
          </th>
          <th
            class="summary-header"
          >
            Summary
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Adjectives and Adverbs
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Capitalization
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Commonly Confused Words
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Compound Subjects, Objects, and Predicates
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Plural and Possessive Nouns
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Prepositional Phrases
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
        <tr>
          <td>
            Subject-Verb Agreement
          </td>
          <td
            class="center-align"
          />
          <td
            class="center-align"
          />
          <td
            class=""
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
